--- a/module/input/WavReader/data/config/WavReader.yaml
+++ b/module/input/WavReader/data/config/WavReader.yaml
@@ -1,4 +1,4 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
-wav_path: test.wav
+wav_path: /home/nubots/NUbots/module/input/WavReader/data/audio/test.wav
