--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -2,10 +2,10 @@
 population_size: 40
 # More generations encourages deeper search
 max_generations: 50
-num_objectives: 2
+num_objectives:  1 
 num_constraints: 2
 seed: 7777777
-trial_duration_limit: 30 # number of seconds to run a single trial for
+trial_duration_limit: 60 # number of seconds to run a single trial for
 probabilities:
   real:
     # Note that simulated binary crossover (SBX) does something like mutation as well
@@ -22,7 +22,7 @@ eta:
   C: 20
   M: 20
 
-task: "rotation"
+task: "multipath"
 task_config_path: "config/webots/QuinticWalk.yaml"
 
 initial_translation: [-4.0, -3.0, 0.51] # x, y, z
@@ -50,7 +50,7 @@ walk:
     height: [0.45, 0.35, 0.5]
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
-    pitch: [10 * pi / 180, -10 * pi / 180, 30 * pi / 180] #[24 * pi / 180, -15 * pi / 180, 30 * pi / 180]  OPTIMAL!!!!!!! [24 * pi / 180, -10 * pi / 180, 30 * pi / 180]
+    pitch: [10 * pi / 180, -10 * pi / 180, 30 * pi / 180] 
     # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
     x_offset: [0.03, -0.05, 0.05]
@@ -70,6 +70,5 @@ walk:
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [1.57, 0.5, 3.14] # [0.2, 0.01, 0.51]
-  #velocity_Y: [0.0, 0.0, 0.0] #[-0.2, -0.51, 0.01]
-  #rotation: [0.0, 0.0, 0.0] #[0.15, 0.1, 1.57]
+  velocity: [0.2, 0.01, 0.51]
+  rotation:  [0.15, 0.1, 1.57]
