--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -17,5 +17,5 @@ min_sensor_time_step: 8
 clock_smoothing: 0.6
 
 # Connection details
-server_address: "10.1.0.102" #"192.168.20.12"
+server_address: "192.168.20.12"
 port: 10001
