--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -2,7 +2,7 @@
 population_size: 40
 # More generations encourages deeper search
 max_generations: 50
-num_objectives:  2 
+num_objectives: 2
 num_constraints: 2
 seed: 7777777
 trial_duration_limit: 61 # number of seconds to run a single trial for
@@ -22,8 +22,7 @@ eta:
   C: 20
   M: 20
 
-
-task: "walk" #"multipath"
+task: "multipath"
 task_config_path: "config/webots/QuinticWalk.yaml"
 
 initial_translation: [-4.0, -3.0, 0.51] # x, y, z
