--- a/module/platform/Webots/data/config/webots.yaml
+++ b/module/platform/Webots/data/config/webots.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: WARN
+log_level: DEBUG
 
 # Maximum FSR sensor value. This is based on the Darwin-OP FSR sensors
 # Max value 65,535 / 1000 (N) = 65.535 N
