--- a/module/support/logging/DataLogging/data/config/DataLogging.yaml
+++ b/module/support/logging/DataLogging/data/config/DataLogging.yaml
@@ -1,12 +1,13 @@
-log_level: WARN
+log_level: DEBUG
 
 output:
-  directory: log
+  directory: recordings
   split_size: 5 * GiB
 
 # You can put any messages that is emitted in the system here and it will be logged
 # The below ones are just the most common and here as an example
 messages:
-  message.output.CompressedImage: false
+  message.output.CompressedImage: true
+  message.vision.FieldLines: true
   message.input.Sensors: false
   message.platform.RawSensors: false
