--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS
     CACHE STRING "Enable/Disable output of compile commands during generation." FORCE
 )
 
-# Enable warnings
-add_compile_options(-Wall -Wextra)
+# Enable all warnings that we can
+add_compile_options(-Wall -Wpedantic -Wextra)
 
 # This is needed everywhere so that we can catch segmentation faults
 add_compile_options(-fnon-call-exceptions)
