--- a/module/sound/SpeechRecognition/CMakeLists.txt
+++ b/module/sound/SpeechRecognition/CMakeLists.txt
@@ -1,3 +1,3 @@
 # Build our NUClear module
-# find_package(vosk-api REQUIRED)
-nuclear_module()
+find_package(vosk-api REQUIRED)
+nuclear_module(LIBRARIES vosk-api::vosk-api)
