make the merge nicer

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,8 +47,7 @@ RUN install-package \
     sox \
     subversion \
     unzip \
-    ncurses \
-    openblas
+    ncurses
 
 # Get python to look in /usr/local for packages
 RUN echo $(python -c "import site; print(site.getsitepackages()[0].replace('/usr', '/usr/local'))") \
@@ -88,7 +87,7 @@ RUN python /usr/local/generate_toolchain.py --prefix /usr
 #############################################
 
 #Speech Rec
-RUN PREFIX="/usr" install-from-source \
+RUN install-from-source \
     https://github.com/alphacep/openfst/archive/7dfd808194105162f20084bb4d8e4ee4b65266d5.tar.gz \
     --enable-static \
     --enable-shared \
@@ -98,10 +97,10 @@ RUN PREFIX="/usr" install-from-source \
     --disable-bin \
     --with-pic
 COPY usr/local/package/clapack.sh /usr/local/package/clapack.sh
-RUN PREFIX="/usr" /usr/local/package/clapack.sh \
+RUN /usr/local/package/clapack.sh \
     https://github.com/alphacep/clapack/archive/0b815a85da01c384404c74a9cff0e32385cb925f.tar.gz
 COPY usr/local/package/kaldi.sh /usr/local/package/kaldi.sh
-RUN PREFIX="/usr" /usr/local/package/kaldi.sh \
+RUN /usr/local/package/kaldi.sh \
     https://github.com/alphacep/kaldi/archive/6417ac1dece94783e80dfbac0148604685d27579.tar.gz \
     -DMATHLIB=OpenBLAS \
     -DKALDI_BUILD_EXE=OFF \
@@ -109,7 +108,7 @@ RUN PREFIX="/usr" /usr/local/package/kaldi.sh \
     -DKALDI_USE_PATCH_NUMBER=OFF \
     -DBUILD_SHARED_LIBS=ON \
     -DKALDI_VERSION="5.5"
-RUN PREFIX="/usr" install-from-source \
+RUN install-from-source \
     https://github.com/alphacep/vosk-api/archive/refs/tags/v0.3.43.tar.gz
 
 ################################################
@@ -382,6 +381,3 @@ RUN install -d -m 0755 /home/nubots/NUbots
 RUN install -d -m 0777 /home/nubots/build
 WORKDIR /home/nubots/NUbots
 
-#Speech Rec
-COPY usr/local/package/vosk.sh /usr/local/package/vosk.sh
-RUN /usr/local/package/vosk.sh
