--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -1,11 +1,11 @@
 # Larger population encourages wider search
-population_size: 52
+population_size: 60
 # More generations encourages deeper search
 max_generations: 50
 num_objectives: 1
 num_constraints: 2
 seed: 7777777
-trial_duration_limit: 30 # number of seconds to run a single trial for
+trial_duration_limit: 65 # number of seconds to run a single trial for
 probabilities:
   real:
     # Note that simulated binary crossover (SBX) does something like mutation as well
@@ -24,6 +24,10 @@ eta:
 
 task: "multipath"
 task_config_path: "config/webots/QuinticWalk.yaml"
+
+# Only for multipath
+task_supplied_pop: "true"
+task_supplied_pop_file: 
 
 initial_translation: [-4.0, -3.0, 0.51] # x, y, z
 intial_rotation: [0, 0, 1, 0] # x, y, z, angle (rads)
@@ -47,7 +51,7 @@ walk:
   trunk:
     # Height of the trunk from ground (how much we bend the knee, for the entire walk, fully standing is 0.51-ish)
     # (in m, > 0)
-    height: [0.45, 0.4, 0.5]
+    height: [0.6, 0.4, 0.6]
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
     pitch: [10 * pi / 180, -10 * pi / 180, 30 * pi / 180]
@@ -70,5 +74,5 @@ walk:
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [-0.2, -1.00, -0.01] #[0.2, 0.01, 1.00]
+  velocity: [0.2, 0.01, 1.00] # [-0.2, -1.00, -0.01]
   rotation: [0.15, -1.57, 0.1] # [0.15, 0.1, 1.57]
