Update the formatting system

--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -29,9 +29,6 @@ jobs:
       has_workflow_changes: ${{ steps.filter.outputs.workflow_changes }}
       has_docker_changes: ${{ steps.filter.outputs.docker_changes }}
       has_code_changes: ${{ steps.filter.outputs.code_changes }}
-      has_clang_changes: ${{ steps.filter.outputs.clang_changes }}
-      has_cmake_changes: ${{ steps.filter.outputs.cmake_changes }}
-      has_python_changes: ${{ steps.filter.outputs.python_changes }}
 
     steps:
       - name: Checkout Code
@@ -49,19 +46,7 @@ jobs:
               - 'docker/**'
             code_changes:
               - '{module,shared,nuclear}/**'
-            clang_changes:
-              - '.github/workflows/format/validate_clang_format.sh'
-              - '**/.clang-format'
-              - '**/*.{c,cc,cpp,cxx,hpp,ipp,proto,glsl,vert,frag}'
-            cmake_changes:
-              - '.github/workflows/format/validate_cmake_format.sh'
-              - '**/.cmake-format.py'
-              - '**/CMakeLists.txt'
-              - '**/*.{cmake,role}'
-            python_changes:
-              - '.github/workflows/format/validate_python_format.sh'
-              - '**/pyproject.toml'
-              - '**/*.py'
+              - 'CMakeLists.txt'
 
   # Build the docker image. This job is not conditional since we don't want it skipped
   # because other jobs depend on it. The actual building of the image is cached, so it
@@ -150,16 +135,10 @@ jobs:
       - name: Test the code
         run: ./b tests run
 
-  # Check the code is formatted according to clang-format
-  clang-format:
-    name: "C++/Protobuf Formatting"
+  # Check that the code is formatted correctly
+  check-format:
+    name: "Check Code Formatting"
     needs: [check_for_changes, build_docker]
-
-    # Run only if the workflow or `clang-format` related files have changed
-    if: >
-      needs.check_for_changes.outputs.has_workflow_changes == 'true' ||
-      needs.check_for_changes.outputs.has_docker_changes == 'true' ||
-      needs.check_for_changes.outputs.has_clang_changes == 'true'
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
@@ -176,60 +155,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check clang-format
-        run: .github/workflows/format/validate_clang_format.sh
-
-  # Validate the formatting is correct according to cmake-format
-  cmake-format:
-    name: "CMake Formatting"
-    needs: [check_for_changes, build_docker]
-
-    # Run only if the workflow or `cmake-format` related files have changed
-    if: >
-      needs.check_for_changes.outputs.has_workflow_changes == 'true' ||
-      needs.check_for_changes.outputs.has_docker_changes == 'true' ||
-      needs.check_for_changes.outputs.has_cmake_changes == 'true'
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # Run on the container we just built
-    container:
-      image: "${{ needs.build_docker.outputs.image }}"
-      options: --user 0:0
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Check cmake-format
-        run: .github/workflows/format/validate_cmake_format.sh
-
-  # Validate the formatting is correct according to isort and black
-  python-format:
-    name: "Python Formatting"
-    needs: [check_for_changes, build_docker]
-
-    # Run only if the workflow or Python files have changed
-    if: >
-      needs.check_for_changes.outputs.has_workflow_changes == 'true' ||
-      needs.check_for_changes.outputs.has_docker_changes == 'true' ||
-      needs.check_for_changes.outputs.has_python_changes == 'true'
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # Run on the container we just built
-    container:
-      image: "${{ needs.build_docker.outputs.image }}"
-      options: --user 0:0
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Check isort and black
-        run: .github/workflows/format/validate_python_format.sh
+        run: ./b format --check --all --verbose
