--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -154,5 +154,5 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Check clang-format
+       - name: Check formatting 
         run: ./b format --check --all --verbose
