--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -1,4 +1,4 @@
-log_level: DEBUG
+log_level: WARN
 
 ball_last_seen_max_time: 2 # time in seconds
 goal_last_seen_max_time: 10 # time in seconds
@@ -22,7 +22,7 @@ localisation_interval: 30
 localisation_duration: 5
 
 # Enables forced game mode and phase if set to true
-force_playing: true
+force_playing: false
 force_penalty_shootout: false
 
 # Time to walk forward in ready (in seconds)
