--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,16 +1,18 @@
 {
   "recommendations": [
-    "ms-vscode.cpptools",
-    "twxs.cmake",
-    "ms-vscode.cmake-tools",
     "cheshirekow.cmake-format",
+    "coolbear.systemd-unit-file",
+    "cschlosser.doxdocgen",
+    "esbenp.prettier-vscode",
+    "github.vscode-pull-request-github",
     "ms-azuretools.vscode-docker",
-    "galarius.vscode-opencl",
+    "ms-python.isort",
     "ms-python.python",
+    "ms-python.vscode-pylance",
     "ms-vscode-remote.remote-containers",
-    "zxh404.vscode-proto3",
-    "redhat.vscode-yaml",
-    "dpkristensen-garmin.udev-rules",
-    "hangxingliu.vscode-systemd-support"
+    "ms-vscode.cpptools-extension-pack",
+    "slevesque.shader",
+    "streetsidesoftware.code-spell-checker",
+    "zxh404.vscode-proto3"
   ]
 }
