--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,33 @@
 {
-    "cmake.generator": "Ninja",
-    "editor.formatOnSave": true,
-    "editor.insertSpaces": true,
-    "editor.rulers": [120],
-    "editor.detectIndentation": true,
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true,
-    "files.eol": "\n",
-    "C_Cpp.clang_format_style": "file",
-    "C_Cpp.default.cppStandard": "c++20",
-    "C_Cpp.preferredPathSeparator": "Forward Slash",
-    "cSpell.language": "en-GB",
-    "protoc": {
-      "options": ["-I${workspaceFolder}/nuclear/message/proto"]
-    },
-    "files.associations": {
-      "*.role": "cmake",
-      ".clang-tidy": "yaml"
-    },
-    "python.analysis.extraPaths": ["${workspaceFolder}/tools", "${workspaceFolder}/nuclear"],
-    "python.formatting.provider": "black",
-    "[python]": {
-      "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-      }
-    },
-    "[jsonc]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "cmake.generator": "Ninja",
+  "editor.formatOnSave": true,
+  "editor.insertSpaces": true,
+  "editor.rulers": [120],
+  "editor.detectIndentation": true,
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "files.eol": "\n",
+  "C_Cpp.clang_format_style": "file",
+  "C_Cpp.default.cppStandard": "c++20",
+  "C_Cpp.preferredPathSeparator": "Forward Slash",
+  "cSpell.language": "en-GB",
+  "protoc": {
+    "options": ["-I${workspaceFolder}/nuclear/message/proto"]
+  },
+  "files.associations": {
+    "*.role": "cmake",
+    ".clang-tidy": "yaml",
+    ".Doxyfile": "properties"
+  },
+  "python.analysis.extraPaths": ["${workspaceFolder}/tools", "${workspaceFolder}/nuclear"],
+  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
     }
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
+}
