--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,33 @@
 {
+  "cmake.generator": "Ninja",
   "editor.formatOnSave": true,
-  "editor.tabSize": 4,
   "editor.insertSpaces": true,
+  "editor.rulers": [120],
+  "editor.detectIndentation": true,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "files.eol": "\n",
+  "C_Cpp.clang_format_style": "file",
+  "C_Cpp.default.cppStandard": "c++20",
+  "C_Cpp.preferredPathSeparator": "Forward Slash",
   "cSpell.language": "en-GB",
-  "editor.rulers": [120],
   "protoc": {
     "options": ["-I${workspaceFolder}/nuclear/message/proto"]
   },
-  "python.formatting.provider": "black",
-  "python.analysis.extraPaths": ["${workspaceFolder}/tools", "${workspaceFolder}/nuclear"],
-  "yaml.format.printWidth": 120,
   "files.associations": {
     "*.role": "cmake",
+    ".clang-tidy": "yaml",
     ".Doxyfile": "properties"
   },
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+  "python.analysis.extraPaths": ["${workspaceFolder}/tools", "${workspaceFolder}/nuclear"],
+  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
