--- a/module/input/Camera/data/config/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/Cameras/Right.yaml
@@ -6,11 +6,12 @@ settings:
   Height: 1024
   OffsetX: 0
   OffsetY: 0
-  ExposureAuto: Off # Options: Off, Once, Continuous
+  ExposureAuto: Continuous # Options: Off, Once, Continuous
+  AutoExposureExposureTimeUpperLimit: 3000 # Lower time reduces motion blur
   GainAuto: Off # Options: Off, Once, Continuous
+  Gain: 18
   BalanceWhiteAuto: Once # Options: Off, Once, Continuous
   AcquisitionFrameRateEnable: true
-  AcquisitionFrameRate: 25.00 # Adjusting frame rate can help remove flickering from lighting
-
-  ExposureTime: 3000
-  Gain: 18
+  AcquisitionFrameRate: 100.00 # Adjusting frame rate can help remove flickering from lighting
+  AutoExposureTargetGreyValueAuto: Off
+  AutoExposureTargetGreyValue: 30
