--- a/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
@@ -3,23 +3,23 @@ log_level: WARN
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: 2.00
+  freq: 1.6
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: 0.7
+  double_support_ratio: 0.45
   # Give extra swing to first step for better start
   # (in ?, [0:10])
-  first_step_swing_factor: 1.0 #1.0
+  first_step_swing_factor: 1.0
   foot:
     # Lateral distance between the feet center (how spread apart the feet should be)
     # (in m, >= 0)
-    distance: 0.16573612838905935 #0.28
+    distance: 0.16573612838905935
     # Maximum flying foot height (how high we lift a foot from the ground)
     # (in m, >= 0)
-    rise: 0.06696921459985106 #0.1
+    rise: 0.06696921459985106
     # Pause of Z movement on highest point (how long we hold a foot at the top, as a ratio of how long we're standing on one foot)
     # (single support cycle ratio, [0,1])
-    z_pause: 0.0 #0.04
+    z_pause: 0.0
     put_down:
       # Let the foot's downward trajectory end above the ground
       # this is helpful if the support leg bends
@@ -27,7 +27,7 @@ walk:
       z_offset: 0.0
       # Phase time for moving the foot from Z offset to ground
       # (in half cycle ratio [0:1])
-      phase: 1 # 0.5
+      phase: 1
       # Roll offset on flying foot at put down
       # (in rad, [-1,1])
       roll_offset: 0.0
@@ -47,36 +47,36 @@ walk:
     height: 0.44
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
-    pitch: 0.45 #0.3960581214540991 #28
+    pitch: 0.26
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
-    phase: -0.10781713685949587
+    phase: -0.20781713685949587
     # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
-    x_offset: 0.05 #0.022805009368515608 # 0.045
+    x_offset: 0.05
     # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
-    y_offset: 0.0066027606288281675
+    y_offset: 0
     # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
-    swing: 0.03066984644163803 #0.05
+    swing: 0.03066984644163803
     # Trunk swing pause length in phase at apex (how long we keep the trunk at the max swing position, before swinging back)
     # (half cycle ratio, [0:1])
-    pause: 0 #0
+    pause: 0
     x_offset_p_coef:
       # Trunk forward offset proportional to forward step
       # (in 1)
-      forward: 0.0 # 0.04
+      forward: 0.0
       # Trunk forward offset proportional to rotation step
       # (in m/rad)
-      turn: 0.0 #0.09
+      turn: 0.0
     pitch_p_coef:
       # Trunk pitch orientation proportional to forward step
       # (in rad/m)
-      forward: -1.098538426705446
+      forward: 0
       # Trunk pitch orientation proportional to rotation step
       # (in 1)
-      turn: 0.23005408256772517 #18
+      turn: 0
   kick:
     # Length of kick movement
     # (in m, [0:1])
@@ -95,7 +95,7 @@ walk:
 max_step:
   # Maximal step length in X
   # (in m, [0:1])
-  x: 0.1
+  x: 0.2
   # Maximal step length in Y
   # (in m, [0:1])
   y: 0.1
