--- a/module/input/NatNet/data/config/NatNet.yaml
+++ b/module/input/NatNet/data/config/NatNet.yaml
@@ -1,4 +1,6 @@
 multicast_address: 239.255.42.99
 command_port: 1510
 data_port: 1511
-dump_packets: true
+
+#Note: This will create a large amount of files very quickly so use sparingly
+dump_packets: false
