--- a/module/behaviour/planning/SimpleWalkPathPlanner/data/config/webots/SimpleWalkPathPlanner.yaml
+++ b/module/behaviour/planning/SimpleWalkPathPlanner/data/config/webots/SimpleWalkPathPlanner.yaml
@@ -23,3 +23,6 @@ rotate_around_ball_speed_y: -0.4
 walk_to_ready_speed_x: 0.01
 walk_to_ready_speed_y: -0.01
 walk_to_ready_rotation: 0
+
+# Y - Offset for ball position such that ball is approached with foot behind ball
+ball_y_offset: 0.1
