--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -5,6 +5,7 @@ goal_last_seen_max_time: 10 # time in seconds
 start_position_offensive: [-0.2, 0]
 start_position_defensive: [1.5, 0]
 is_goalie: false
+goalie_max_ball_distance: 1.8
 
 ball_search_walk_start_speed: 0.01
 ball_search_walk_stop_speed: 0.01
@@ -26,3 +27,9 @@ force_penalty_shootout: false
 
 # Time to walk forward in ready (in seconds)
 walk_to_ready_time: 20
+
+# Distance to begin the kick on the ball while normally playing (in metres)
+kicking_distance_threshold: 0.35
+
+# Angle from the front to begin kicking the ball (in radians) absolute value so either direction
+kicking_angle_threshold: 0.5
