--- a/module/behaviour/planning/WalkPathPlanner/data/config/WalkPathPlanner.yaml
+++ b/module/behaviour/planning/WalkPathPlanner/data/config/WalkPathPlanner.yaml
@@ -1,17 +1,17 @@
-log_level: WARN
+log_level: DEBUG
 
 # Priority in subsumption system
 walk_path_planner_priority: 3
 
 # General playing tuning values for approaching ball
-forward_speed: 0.3
-side_speed: 0.25
-max_turn_speed: 0.25
-min_turn_speed: -0.25
+forward_speed: 0.0125
+side_speed: 0.01
+max_turn_speed: 0.15
+min_turn_speed: -0.15
 
 # Rotate on the spot tuning values
-rotate_speed: 0.4
-rotate_speed_x: 0
+rotate_speed: 0.2
+rotate_speed_x: -0.04
 rotate_speed_y: 0
 
 # rotate_around_ball tuning values
@@ -20,9 +20,9 @@ rotate_around_ball_speed_x: 0
 rotate_around_ball_speed_y: -0.4
 
 # Walk to ready position tuning values
-walk_to_ready_speed_x: 0.01
-walk_to_ready_speed_y: -0.01
-walk_to_ready_rotation: 0
+walk_to_ready_speed_x: 0.1
+walk_to_ready_speed_y: 0.05
+walk_to_ready_rotation: 0.4
 
 # Y - Offset for ball position such that ball is approached with foot behind ball
 ball_y_offset: 0.1
