--- a/module/behaviour/planning/WalkPathPlanner/data/config/webots/WalkPathPlanner.yaml
+++ b/module/behaviour/planning/WalkPathPlanner/data/config/webots/WalkPathPlanner.yaml
@@ -1,16 +1,18 @@
-log_level: DEBUG
+log_level: WARN
 
 # Priority in subsumption system
 walk_path_planner_priority: 3
 
 # General playing tuning values for approaching ball
-forward_speed: 0.5
-side_speed: 0.25
+max_forward_speed: 0.5
+min_forward_speed: 0.1
 max_turn_speed: 0.4
 min_turn_speed: -0.4
+acceleration: 0.005 # maximum increment in walk command velocity
+ball_approach_radius: 1 # region around ball to begin decelerating
 
 # Rotate on the spot tuning values
-rotate_speed: 0.4
+rotate_speed: 0.25
 rotate_speed_x: 0
 rotate_speed_y: 0
 
@@ -25,4 +27,4 @@ walk_to_ready_speed_y: -0.01
 walk_to_ready_rotation: 0
 
 # Y - Offset for ball position such that ball is approached with foot behind ball
-ball_y_offset: 0
+ball_y_offset: 0.05
