--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -320,7 +320,8 @@ RUN install-package \
 RUN pip install --upgrade \
     cmake-format==0.6.13 \
     isort==5.7.0 \
-    black==22.3.0
+    black==22.3.0 \
+    licenceheader==0.8.8
 
 RUN npm install -g \
     prettier@2.7.1 \
