--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.20)
 project(NUbots)
+
+# The GENERATED source file property is now visible in all directories
+cmake_policy(SET CMP0118 NEW)
 
 # ~~~
 # This is needed so we can link in the custom clock object library to the message and utility libraries
