s/inverted/upside_down/g

--- a/module/skill/GetUp/data/config/GetUp.yaml
+++ b/module/skill/GetUp/data/config/GetUp.yaml
@@ -18,5 +18,5 @@ scripts:
     - "RollRight.yaml"
     - "GetUpFront.yaml"
     - "Stand.yaml"
-  getup_inverted:
+  getup_upside_down:
     - "Relax.yaml"
