--- a/module/skill/GetUp/data/config/GetUp.yaml
+++ b/module/skill/GetUp/data/config/GetUp.yaml
@@ -5,18 +5,22 @@ scripts:
   getup_upright:
     - "Stand.yaml"
   getup_front:
-    - "GetUpFront.yaml"
+    - "StandUpFront.yaml"
     - "Stand.yaml"
   getup_back:
-    - "GetUpBack.yaml"
+    - "RollOverBack.yaml"
+    - "StandUpFront.yaml"
     - "Stand.yaml"
   getup_left:
     - "RollLeft.yaml"
-    - "GetUpFront.yaml"
+    - "StandUpFront.yaml"
     - "Stand.yaml"
   getup_right:
     - "RollRight.yaml"
-    - "GetUpFront.yaml"
+    - "StandUpFront.yaml"
     - "Stand.yaml"
+  # We run relax when we are upside down
+  # The logic for this is if the robot is upside down the most likely scenario is someone picked it up by the legs
+  # If this is the case, the safest thing we can do is to relax all the servos to avoid injuring someone.
   getup_upside_down:
     - "Relax.yaml"
