--- a/module/planning/PlanWalkPath/data/config/PlanWalkPath.yaml
+++ b/module/planning/PlanWalkPath/data/config/PlanWalkPath.yaml
@@ -1,2 +1,14 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
+
+# General playing tuning values for approaching ball
+# Speed in the xy direction while walking to a point (m/s)
+speed: 0.3
+# Maximum turning speed in either direction while walking to a point (radians/s)
+max_turn_speed: 0.25
+
+# Pivot tuning values
+# Rotational speed while pivoting (radians/s)
+pivot_speed: 0.4
+# y-axis speed while pivoting around the ball (m/s)
+pivot_ball_speed_y: 0.22
