--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,3 +125,30 @@ endif()
 if(BUILD_TESTS)
   add_subdirectory(${NUCLEAR_SHARED_DIR}/tests)
 endif()
+
+# Allow selection of subcontroller for conditional build
+set(SUBCONTROLLER "OpenCR" CACHE STRING "Select what subcontroller to build for" FORCE)
+# Set the possible values of subcontroller for cmake-gui
+set_property(CACHE SUBCONTROLLER PROPERTY STRINGS "OPENCR" "CM740" "NUSENSE")
+
+# ~~~
+# Don't know why this doesn't work so leaving it here for future reference.
+# Intent was to be able to centrally identify files which are included/excluded
+# based on subcontroller. Instead, adding `return()` statements to each
+# individual file mentioned below.
+# ~~~
+# # Collect relevant directories for each subcontroller
+# set(OPENCR "module/platform/openCR/HardwareIO")
+# set(CM740 "module/platform/cm740/HardwareIO" "module/platform/cm740/HardwareSimulator")
+# # Loop through all directories and exclude if they don't match subcontroller
+# foreach(OPENCR_DIR, CM740_DIR, NUSENSE_DIR IN ZIP_LISTS OPENCR, CM740, NUSENSE)
+#   if(EXISTS OPENCR_DIR AND NOT SUBCONTROLLER STREQUAL OPENCR)
+#     add_subdirectory(OPENCR_DIR EXCLUDE_FROM_ALL)
+#   endif()
+#   if(EXISTS CM740_DIR AND NOT SUBCONTROLLER STREQUAL CM740)
+#     add_subdirectory(CM740_DIR EXCLUDE_FROM_ALL)
+#   endif()
+#   if(EXISTS NUSENSE_DIR AND NOT SUBCONTROLLER STREQUAL NUSENSE)
+#     add_subdirectory(NUSENSE_DIR EXCLUDE_FROM_ALL)
+#   endif()
+# endforeach()
