--- a/module/platform/cm740/HardwareIO/CMakeLists.txt
+++ b/module/platform/cm740/HardwareIO/CMakeLists.txt
@@ -1,2 +1,6 @@
+# Check subcontroller before we build
+if(NOT SUBCONTROLLER STREQUAL CM740)
+  return()
+endif()
 # Build our NUClear module
 nuclear_module()
