--- a/module/platform/cm740/HardwareSimulator/CMakeLists.txt
+++ b/module/platform/cm740/HardwareSimulator/CMakeLists.txt
@@ -1,2 +1,7 @@
+# Check subcontroller before we build
+if(NOT SUBCONTROLLER STREQUAL CM740)
+  return()
+endif()
+
 # Build our NUClear module
 nuclear_module()
