--- a/module/vision/FieldLineDetector/data/config/FieldLineDetector.yaml
+++ b/module/vision/FieldLineDetector/data/config/FieldLineDetector.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: WARN
 
-confidence_threshold: 0.8 # How confident do we need to be that this is a goal point
-cluster_points: 5 # How many points do we need to claim this cluster is a viable goal
+confidence_threshold: 0.8 # How confident do we need to be that this is a field line
+cluster_points: 5 # How many points do we need to claim this cluster is a field line
