--- a/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
+++ b/module/behaviour/strategy/SoccerStrategy/data/config/SoccerStrategy.yaml
@@ -4,7 +4,7 @@ ball_last_seen_max_time: 2 # time in seconds
 goal_last_seen_max_time: 10 # time in seconds
 start_position_offensive: [-0.2, 0]
 start_position_defensive: [1.5, 0]
-is_goalie: false
+is_goalie: true
 goalie_max_ball_distance: 1.8
 
 ball_search_walk_start_speed: 0.01
@@ -22,7 +22,7 @@ localisation_interval: 30
 localisation_duration: 5
 
 # Enables forced game mode and phase if set to true
-force_playing: false
+force_playing: true
 force_penalty_shootout: false
 
 # Time to walk forward in ready (in seconds)
