--- a/module/planning/PlanKick/data/config/PlanKick.yaml
+++ b/module/planning/PlanKick/data/config/PlanKick.yaml
@@ -2,17 +2,15 @@
 log_level: DEBUG
 
 # How long since the last ball measurement before ignoring it and assuming the ball is lost, in milliseconds
-timeout_threshold: 1000
+ball_timeout_threshold: 1000
 
 # Maximum distance of the ball required to kick the ball (in metres)
 ball_distance_threshold: 0.5
 # Maximum angle of the ball from the torso's x-axis required to kick the ball (in radians), both clockwise and anticlockwise
 ball_angle_threshold: 0.4
 
-# Whether to require aligning with the target
-align: false
 # Maximum angle of the target from the torso's x-axis required to kick the ball (in radians), both clockwise and anticlockwise
-target_angle_threshold: 0.5
+target_angle_threshold: PI
 
 # "left", "right" or "auto". Left will only kick with the left leg, right only with the right, and auto will determine the leg from the ball position
-kick_leg: "auto"
+kick_leg: 0
