use limb id for leg

--- a/module/planning/PlanKick/data/config/PlanKick.yaml
+++ b/module/planning/PlanKick/data/config/PlanKick.yaml
@@ -12,5 +12,6 @@ ball_angle_threshold: 0.4
 # Maximum angle of the target from the torso's x-axis required to kick the ball (in radians), both clockwise and anticlockwise
 target_angle_threshold: PI
 
-# "left", "right" or "auto". Left will only kick with the left leg, right only with the right, and auto will determine the leg from the ball position
-kick_leg: 0
+# Is a LimbID - UNKNOWN, LEFT_LEG, RIGHT_LEG are valid options
+# Left will only kick with the left leg, right only with the right, and unknown will determine the leg from the ball position
+kick_leg: UNKNOWN
