--- a/module/planning/PlanLook/data/config/PlanLook.yaml
+++ b/module/planning/PlanLook/data/config/PlanLook.yaml
@@ -6,7 +6,7 @@ ball_search_timeout: 2
 # How long to wait until looking for the goals again (seconds)
 goal_search_timeout: 3
 # How long to wait until looking over the field again (seconds)
-field_search_timeout: 3
+field_search_timeout: 5
 
 # Time lingering at each position in search (seconds)
 search_fixation_time: 2
@@ -14,5 +14,14 @@ search_fixation_time: 2
 # List of positions for search
 min_yaw: &min_yaw -0.7
 max_yaw: &max_yaw 0.7
-min_pitch: &min_pitch -0.4
-search_positions: [[*min_yaw, *min_pitch], [0, *min_pitch], [*max_yaw, *min_pitch], [0, *min_pitch]]
+min_pitch: &min_pitch -0.63
+max_pitch: &max_pitch 0.0
+search_positions:
+  [
+    [*min_yaw, *min_pitch],
+    [0, *min_pitch],
+    [*max_yaw, *min_pitch],
+    [*max_yaw, *max_pitch],
+    [0, *max_pitch],
+    [*min_yaw, *max_pitch],
+  ]
