--- a/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
+++ b/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
@@ -4,8 +4,8 @@ battery:
   flat_voltage: 14.0
 
 opencr:
-  device: "/dev/OpenCR"
-  baud: 3000000
+  device: "/dev/ttyUSB0"
+  baud: 1000000
   byte_wait: 1200
   packet_wait: 100000
   bus_reset_wait_time_us: 0
