update falling relax

--- a/module/planning/FallingRelaxPlanner/data/config/FallingRelaxPlanner.yaml
+++ b/module/planning/FallingRelaxPlanner/data/config/FallingRelaxPlanner.yaml
@@ -32,3 +32,5 @@ accelerometer_angle:
   unstable: 45 * pi / 180.0
   # The angle of the accelerometer (from upright 0) at which the robot is considered falling
   falling: 45 * pi / 180.0
+
+fall_script: Relax.yaml
