create benchmark datalogging

--- a/module/support/logging/DataLogging/data/config/DataLogging.yaml
+++ b/module/support/logging/DataLogging/data/config/DataLogging.yaml
@@ -10,3 +10,4 @@ messages:
   message.output.CompressedImage: false
   message.input.Sensors: false
   message.platform.RawSensors: false
+  message.input.OdometryBenchmark: true
